--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   color: #61dafb;
 }
 
+.item {
+  margin-bottom: -1rem;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
